--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Build
 on:
-  push:
-  pull_request:
-  repository_dispatch:
+  push:[ deploy ]
+  pull_request:[ master ]
+  
+ repository_dispatch:
 jobs:
     deploy:
       runs-on: ubuntu-latest
