--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [12.x, 14.x]
     
     steps:
     - uses: actions/checkout@v2
@@ -26,3 +26,4 @@ jobs:
       run: |
         npm install
         npx webpack
+        npm i @cloudflare/wrangler -g 
