--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,17 @@
-name: Build
+name: Deploy
+
 on:
-  push:[ deploy ]
-  pull_request:[ master ]
-  
- repository_dispatch:
+  push:
+    branches:
+      - deploy  
+
 jobs:
-    deploy:
-      runs-on: ubuntu-latest
-      timeout-minutes: 60
-      needs: test
-      steps:
-        - uses: actions/checkout@v2
-        - name: Publish
-          uses: cloudflare/wrangler-action@1.3.0
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: Publish
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
