--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -24,4 +24,6 @@ jobs:
 
     - name: Audit
       run: |
-        npm audit fix
+        npm audit fix --force
+        npm update
+        npm install firebase-tools
