--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 14.x]
+        node-version: [ 16.x]
     
     steps:
     - uses: actions/checkout@v2
@@ -22,6 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Audit
+    - name: Python Package
       run: |
-        npm audit fix
+        pip -m install npm --upgrade npm
+        npm update
+        npm audit fix --force
