--- a/.github/workflows/wrangler-login.yml
+++ b/.github/workflows/wrangler-login.yml
@@ -27,4 +27,4 @@ jobs:
         npm i @cloudflare/wrangler -g
     - name: Wrangler Login
       run:
-        wranger login
+        wrangler login
